--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@ body {
 	   and use the OS’s UI font as the website font
 	 */
   font: 100%/1.5 system-ui;
+  font-family: sans-serif;
+  max-width: 100ch;
+  margin: 0 auto;
+  padding: 1rem;
 }
