--- a/style.css
+++ b/style.css
@@ -10,7 +10,23 @@ body {
   
 }
 
-nav ul,
-  nav li {
-    display: contents;
-  }
+nav {
+  display: flex;
+  gap: 1rem;
+}
+
+nav a {
+  flex: 1;
+  text-align: center;
+  padding: 0.5rem 0;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  background-color: #f0f0f0;
+}
+
+nav a.current {
+  background-color: #dcdcdc;
+  color: black;
+  font-weight: bold;
+}
