--- a/style.css
+++ b/style.css
@@ -35,10 +35,9 @@ nav a.current {
   padding-bottom: 0.2em;
 }
 
-/* Style for hovered links */
 nav a:hover {
   background-color: oklch(85% 10% 208.59);  
   color: inherit; 
-  border-bottom: 1px solid var(--color-accent);  
+  border-bottom: 0.5em solid var(--color-accent);  
   padding-bottom: 0.2em;  
 }
