--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ nav {
 nav a {
   flex: 1;
   text-align: center;
-  padding: 0.5em;
+  padding: 0.5em 0;
   text-decoration: none;
   color: inherit;
   font-weight: bold;
-  margin-bottom: 1rem;  
+  margin-bottom: 0;  
 }
 
 nav a.current {
