--- a/style.css
+++ b/style.css
@@ -41,3 +41,32 @@ nav a:hover {
   border-bottom: 0.5em solid oklch(80% 20% 215);  
   padding-bottom: 0.2em;  
 }
+
+input, textarea, button {
+  font: inherit;
+}
+
+
+form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
+}
+
+form label {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1 / -1;
+  margin-block: 0.5rem;
+}
+
+form input,
+form textarea,
+form button {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+form button {
+  grid-column: 1 / -1;
+}
