--- a/style.css
+++ b/style.css
@@ -70,3 +70,38 @@ form button {
 form button {
   grid-column: 1 / -1;
 }
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  gap: 1rem;
+}
+
+article {
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+  gap: 1em;
+}
+
+h2 {
+  margin: 0;
+}
+
+h1 {
+  font-size: 4em;  /* 400% of body text size */
+  line-height: 1.1;
+  text-wrap: balance; /* Ensures heading text doesn't break unevenly */
+}
+
+h2 {
+  font-size: 2.5em;  
+  line-height: 1.1;
+  text-wrap: balance;
+}
+
+h3, h4, h5, h6 {
+  font-size: 1.5em;  
+  line-height: 1.1;
+  text-wrap: balance;
+}
