--- a/style.css
+++ b/style.css
@@ -105,3 +105,44 @@ h3, h4, h5, h6 {
   line-height: 1.1;
   text-wrap: balance;
 }
+
+
+header {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+header h1 {
+  font-size: 4em;  
+  margin-bottom: 0.5rem;
+}
+
+header p {
+  font-size: 1.1rem;
+  color: #4a4a4a;
+}
+
+section {
+  margin-bottom: 2rem;
+}
+
+section header h2 {
+  font-size: 2.5em;
+  border-bottom: 2px solid oklch(80% 3% 200);
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  color:rgb(158, 175, 125);
+}
+
+section p {
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #444;
+}
+
+#personal-info p {
+  text-align: center;
+  font-size: 1.1rem;
+  color: #444;
+  margin: 0.5rem 0; /* Add some space between paragraphs */
+}
