--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav a.current {
 }
 
 nav a:hover {
-  background-color: color-mix(in oklch, var(--color-accent) 15%, canvas); 
+  background-color: color-mix(in oklch, oklch(95% 10% 208.59), canvas 85%);
   color: inherit; 
   border-bottom: 0.5em solid oklch(80% 20% 215);  
   padding-bottom: 0.2em;  
