--- a/style.css
+++ b/style.css
@@ -234,3 +234,32 @@ article ul li {
 input, textarea, button, select {
   font: inherit; /* Ensures that form controls inherit font-family from the body */
 }
+
+#profile-stats dl {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  gap: 1rem;
+  margin: 1.5rem 0;
+}
+
+#profile-stats dt {
+  font-weight: bold;
+  grid-row: 1;
+}
+
+#profile-stats dd {
+  margin: 0;
+  font-size: 1.2em;
+  grid-row: 2;
+}
+
+#profile-stats {
+  background-color: #f9f9f9;
+  border-radius: 12px;
+  padding: 1rem;
+  max-width: 800px;
+  margin: auto;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
