--- a/style.css
+++ b/style.css
@@ -205,6 +205,12 @@ article ul li {
   margin: 0.5rem 0; 
 }
 
+#projects article p:last-of-type {
+  margin-top: 0.5rem;
+  text-align: center;
+  font-weight: bold;
+}
+
 #work-experience article:nth-of-type(2) {
   margin-top: 2rem; 
 }
@@ -262,4 +268,3 @@ input, textarea, button, select {
   margin: auto;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
-
