--- a/style.css
+++ b/style.css
@@ -80,9 +80,7 @@ form button {
 }
 
 .projects {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
-  gap: 1rem;
+  padding: 1rem;
 }
 
 article {
@@ -92,6 +90,20 @@ article {
   border: 1px solid var(--border-color-light);
   padding: 1rem;
   background-color: #fff;
+  max-width: 100%;
+}
+
+article img {
+  width: 100%; /* Make sure the image is constrained to the container width */
+  height: auto; /* Maintain the aspect ratio */
+  max-height: 200px; /* Limit the height to avoid large images */
+  object-fit: cover; /* Ensure the image doesn't distort */
+}
+
+article .description {
+  font-size: 1rem;
+  color: #444;
+  margin-top: 1rem; /* Add space between image and description */
 }
 
 article header {
@@ -109,12 +121,6 @@ article header h3 {
 article header time {
   font-size: 1rem;
   color: #666;
-}
-
-article .description {
-  font-size: 1rem;
-  color: #444;
-  margin-bottom: 1rem;
 }
 
 article .year {
