--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ form button {
 }
 
 .projects {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 1rem;
 }
 
@@ -87,23 +90,21 @@ article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px solid var(--border-color-light);
-  padding: 1rem;
-  background-color: #fff;
+  margin-bottom: 2rem;
   max-width: 100%;
 }
 
 article img {
-  width: 100%; /* Make sure the image is constrained to the container width */
-  height: auto; /* Maintain the aspect ratio */
-  max-height: 200px; /* Limit the height to avoid large images */
-  object-fit: cover; /* Ensure the image doesn't distort */
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
 }
 
 article .description {
   font-size: 1rem;
   color: #444;
-  margin-top: 1rem; /* Add space between image and description */
+  margin-top: 1rem;
 }
 
 article header {
@@ -137,10 +138,6 @@ article .image-box {
   max-height: 200px;
   background-color: #f0f0f0;
   border-radius: 8px;
-}
-
-h2 {
-  margin: 0;
 }
 
 h1 {
