--- a/style.css
+++ b/style.css
@@ -276,6 +276,12 @@ input, textarea, button, select {
 }
 
 .projects article p {
-  margin: 0;
+  margin: 0 0 0.5em 0;
 }
+
+.projects article .year {
+  font-size: 0.9em;
+  color: #666;
+}
+
 
