--- a/style.css
+++ b/style.css
@@ -279,6 +279,24 @@ input, textarea, button, select {
   margin: 0;
 }
 
+.projects article {
+  display: flex;
+  flex-direction: column;
+}
 
+.projects article img {
+  order: 1;
+}
 
+.projects article p {
+  order: 2;
+  margin: 0.5em 0;
+}
 
+.projects article time {
+  order: 3;
+  font-size: 0.9em;
+  color: #666;
+  text-align: center;
+  margin-top: 0.3em;
+}
