--- a/style.css
+++ b/style.css
@@ -306,3 +306,10 @@ article time {
   font-size: 1.2rem;
   text-align: left;
 }
+
+#projects-pie-plot {
+  max-width: 20em;
+  margin-block: 2em;
+  overflow: visible;
+}
+
